src/Base/main/default/objects/ProductTransfer/fields/Destination_Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_Warehouse_Id__c</fullName>
    <formula>DestinationLocation.Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Warehouse Id</label>
    <type>Text</type>
</CustomField>