src/Base/main/default/objects/ProductTransfer/fields/Is_Destination_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Is_Destination_Warehouse__c</fullName>
    <formula>IF( DestinationLocation.Warehouse__c == null , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Destination Warehouse</label>
    <type>Checkbox</type>
</CustomField>