src/Base/main/default/objects/ProductTransfer/fields/Is_Source_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Is_Source_Warehouse__c</fullName>
    <formula>IF( SourceLocation.Warehouse__c == null , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Source Warehouse</label>
    <type>Checkbox</type>
</CustomField>