src/Base/main/default/objects/ProductTransfer/fields/Is_Transfer_To_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_Transfer_To_Employee__c</fullName>
    <formula>ISPICKVAL( DestinationLocation.LocationType , &apos;Employee&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Transfer To Employee</label>
    <type>Checkbox</type>
</CustomField>