src/Base/main/default/objects/ProductTransfer/fields/Is_Transfer_To_Pick_And_Pack__c.field-meta.xml
<CustomField>
    <fullName>Is_Transfer_To_Pick_And_Pack__c</fullName>
    <formula>ISPICKVAL( DestinationLocation.ParentLocation.LocationType, &apos;Pick and Pack&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Transfer To Pick And Pack</label>
    <type>Checkbox</type>
</CustomField>