src/Base/main/default/objects/ProductTransfer/fields/ProductRequired__c.field-meta.xml
<CustomField>
    <fullName>ProductRequired__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Required</label>
    <referenceTo>ProductRequired</referenceTo>
    <relationshipLabel>Product Transfers</relationshipLabel>
    <relationshipName>Product_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>