src/Base/main/default/objects/ProductTransfer/fields/Source_Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Warehouse_Id__c</fullName>
    <formula>SourceLocation.Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Warehouse Id</label>
    <type>Text</type>
</CustomField>