src/Base/main/default/objects/ProductTransfer/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Product Transfers</relationshipLabel>
    <relationshipName>Product_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>