src/Base/main/default/objects/ProductTransfer/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Product Transfers</relationshipLabel>
    <relationshipName>Product_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>